# addon-mathcomp-extra

./: Makefile  README.md  dune  jscoq-mathcomp-extra.json  package.json
dune-files/lib/analysis/theories/: dune
dune-files/lib/bigenough/: dune  dune-project
dune-files/lib/hierarchy-builder/: dune
etc/: analysis-8.16.patch  analysis.patch  finmap.patch  hierarchy-builder-8.16.patch
