(rule
 (targets coq-pkgs)
 (deps
  (package coq-mathcomp-finmap)
  (package coq-mathcomp-bigenough)
  (package coq-mathcomp-multinomials)
  (package coq-hierarchy-builder)
  ;(package coq-mathcomp-analysis)
  (:json jscoq-mathcomp-extra.json))
 (action
  (run npx %{env:pkgtool=jscoq} build %{json})))


(dirs workdir)
